manifests/overlays/production/backstage-patch.yaml
# Archivo: manifests/overlays/production/backstage-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-auth
  namespace: backstage-auth
spec:
  template:
    spec:
      containers:
      - name: backstage-auth
        resources:
          requests:
            memory: "2Gi"
            cpu: "1000m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
