manifests/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-scheduler-ingress
  namespace: task-scheduler
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:226633502530:certificate/ad700e8a-be5a-4491-afe4-1105934e150b
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'

spec:
  rules:
    - host: task-scheduler.pocarqnube.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kubectl-runner-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-scheduler-frontend-service
                port:
                  number: 80
